--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "bc7e"]
 	path = bc7e-sys/bc7e
 	url = git@github.com:BinomialLLC/bc7e.git
+[submodule "bc7enc"]
+	path = bc7enc-sys/bc7enc
+	url = git@github.com:richgel999/bc7enc.git
